// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading indicator component renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    animation="fade"
    size="2rem"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.span
          animation="fade"
          size="2rem"
        >
          ●
        </styled.span>,
        <styled.span
          animation="fade"
          size="2rem"
        >
          ●
        </styled.span>,
        <styled.span
          animation="fade"
          size="2rem"
        >
          ●
        </styled.span>,
      ],
      "size": "2rem",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "LoadingIndicatorMarker-0",
        "nodeType": "class",
        "props": Object {
          "animation": "fade",
          "children": "●",
          "size": "2rem",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "LoadingIndicatorMarker-1",
        "nodeType": "class",
        "props": Object {
          "animation": "fade",
          "children": "●",
          "size": "2rem",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "LoadingIndicatorMarker-2",
        "nodeType": "class",
        "props": Object {
          "animation": "fade",
          "children": "●",
          "size": "2rem",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.span
            animation="fade"
            size="2rem"
          >
            ●
          </styled.span>,
          <styled.span
            animation="fade"
            size="2rem"
          >
            ●
          </styled.span>,
          <styled.span
            animation="fade"
            size="2rem"
          >
            ●
          </styled.span>,
        ],
        "size": "2rem",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "LoadingIndicatorMarker-0",
          "nodeType": "class",
          "props": Object {
            "animation": "fade",
            "children": "●",
            "size": "2rem",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "LoadingIndicatorMarker-1",
          "nodeType": "class",
          "props": Object {
            "animation": "fade",
            "children": "●",
            "size": "2rem",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "LoadingIndicatorMarker-2",
          "nodeType": "class",
          "props": Object {
            "animation": "fade",
            "children": "●",
            "size": "2rem",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Loading indicator component renders with default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.span
          animation="bounce"
          size="1rem"
        >
          ●
        </styled.span>,
        <styled.span
          animation="bounce"
          size="1rem"
        >
          ●
        </styled.span>,
        <styled.span
          animation="bounce"
          size="1rem"
        >
          ●
        </styled.span>,
      ],
      "size": "1rem",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "LoadingIndicatorMarker-0",
        "nodeType": "class",
        "props": Object {
          "animation": "bounce",
          "children": "●",
          "size": "1rem",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "LoadingIndicatorMarker-1",
        "nodeType": "class",
        "props": Object {
          "animation": "bounce",
          "children": "●",
          "size": "1rem",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "LoadingIndicatorMarker-2",
        "nodeType": "class",
        "props": Object {
          "animation": "bounce",
          "children": "●",
          "size": "1rem",
        },
        "ref": null,
        "rendered": "●",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.span
            animation="bounce"
            size="1rem"
          >
            ●
          </styled.span>,
          <styled.span
            animation="bounce"
            size="1rem"
          >
            ●
          </styled.span>,
          <styled.span
            animation="bounce"
            size="1rem"
          >
            ●
          </styled.span>,
        ],
        "size": "1rem",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "LoadingIndicatorMarker-0",
          "nodeType": "class",
          "props": Object {
            "animation": "bounce",
            "children": "●",
            "size": "1rem",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "LoadingIndicatorMarker-1",
          "nodeType": "class",
          "props": Object {
            "animation": "bounce",
            "children": "●",
            "size": "1rem",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "LoadingIndicatorMarker-2",
          "nodeType": "class",
          "props": Object {
            "animation": "bounce",
            "children": "●",
            "size": "1rem",
          },
          "ref": null,
          "rendered": "●",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
